<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.linusgoransson.raspapp.MainActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNummer"
        android:id="@+id/textNummer"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Next"
        android:id="@+id/button_Next"
        android:layout_below="@+id/textNummer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onButtonNext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Prev"
        android:id="@+id/button_Prev"
        android:layout_alignBottom="@+id/button_Next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonPrev" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/funktion_Text"
        android:id="@+id/funktion_Text"
        android:layout_below="@+id/button_Next"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/funktion_Nr_Text"
        android:id="@+id/funktion_Nummer"
        android:layout_below="@+id/funktion_Text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="160dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/funktion_Info"
        android:id="@+id/funktion_Info"
        android:layout_alignTop="@+id/funktion_Nummer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/empty"
        android:layout_below="@+id/funktion_Info"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:id="@+id/buttonCancel"
        android:onClick="onButtonX"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/imageView"
        android:background="#bc3939"
        android:layout_alignTop="@+id/buttonRun"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/run"
        android:id="@+id/buttonRun"
        android:layout_alignParentBottom="true"
        android:onClick="onButtonRun"
        android:layout_toEndOf="@+id/imageView"
        android:background="#2c6519"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/funcStatNotRun"
        android:id="@+id/function_Stat_Text"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
